# vetbot

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  docker-compose.yaml  fly.toml  main.py  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 03c32e56446f_add_initial_tables.py  4c1b83ec4a4e_change_datastore_json_jsonb.py  e952e25d5b69_initial.py
backend/src/: consts.py  main.py
backend/src/api/: deps.py  main.py
backend/src/api/routers/: appointment_router.py  faq_router.py
backend/src/core/: db.py  error_handling.py  logger.py  middlewares.py
backend/src/models/: common.py  vetbot.py
backend/src/rag/: ingestion.py  retrieval.py  utils.py
backend/src/rag/data/: FAQ.md
backend/src/rag/evals/: eval_results.json  evaluate.py  generate.py  qa_pairs.json
backend/src/services/: chat_engine.py  openai.py
frontend/: package-lock.json  package.json
frontend/src/: consts.ts  types.ts  utils.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/vetbot/: page.tsx
frontend/src/components/: AddAppointment.tsx  Appointments.tsx  Chat.tsx  Header.tsx  Loader.tsx  Recommendations.tsx  RenderMessages.tsx  SendMessage.tsx  Sidebar.tsx  WaitingList.tsx  WaveToast.tsx  markdown.tsx
frontend/src/hooks/: useAppointments.tsx  useScrollToBottom.tsx
frontend/src/schemas/: appointment.ts
frontend/src/services/: ai-chat.ts  appointments.ts
