[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "llama-index>=0.12.41",
    "llama-index-storage-chat-store-postgres>=0.2.1",
    "llama-index-vector-stores-postgres>=0.5.3",
    "openai>=1.84.0",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "sentry-sdk[fastapi]>=2.29.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
